--- a/(style)a{color,red;}.html
+++ b/(style)a{color,red;}.html
@@ -12,7 +12,7 @@ a {
 </style>
 
 <body>
-<h1><a href="file:///C:/Users/Evan/Desktop/WEB/main%20tag/Web%20site.html"><font color="red">Best Streaming Site</font></a></h1>
+<h1><a href="file:///C:/Users/Evan/Desktop/WEB/main%20tag/Web%20site.html">Best Streaming Site</a></h1>
 <ol>
 	<li><a href="https://www.youtube.com/" target="_blank">Youtube</a></li>
 	<li><a href="https://www.netflix.com/browse" target="_blank">Netflix</a></li>
